--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,10 @@
+2024-12-10 Version: v1.1.0
+- Support API GetAlarmDetailById.
+- Support API GetConsoleScore.
+- Support API GetSowList.
+- Support API GetVulListById.
+
+
 2024-11-27 Version: v1.0.0
 - Generated golang 2016-12-28 for mssp.
 
